<resources>
    <string name="app_name">ExamOverflow@HKU</string>
    <string name="enter_uid">UID</string>
    <string name="enter_password">Password</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="processing">Processing…</string>
    <string name="logging_in">Logging in…</string>
    <string name="waiting_login">Recovering user state…</string>
    <string name="enter_hku_email">HKU email (MUST BE VALID)</string>
    <string name="enter_name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_token_code">Token code</string>
    <string name="send_token">Send token to email</string>
    <string name="sending_token">Sending token to email…</string>
    <string name="signing_up">Signing up…</string>

    <string name="label_login">ExamOverflow@HKU - Log In</string>
    <string name="label_signup">ExamOverflow@HKU - Registration</string>
    <string name="label_search">ExamOverflow@HKU - Search</string>
    <string name="label_question">ExamOverflow@HKU - Questions</string>
    <string name="label_solution">ExamOverflow@HKU - Solutions</string>
    <string name="label_discussion">ExamOverflow@HKU - Discussion</string>

    <string name="log_out">Log out</string>
    <string name="enter_course_code">Course code</string>
    <string name="choose_academic_year">Academic Year</string>
    <string name="choose_semester">Semester</string>

    <string name="add_question">Add an exam question</string>
    <string name="add_solution">Add a solution to this question</string>
    <string name="add_discussion">Add discussion</string>
    <string name="back_to_search">Go back to search</string>
    <string name="back_to_question">Go back to Questions</string>
    <string name="back_to_solution">Go back to Solutions page</string>


    <string name="academic_year_prompt">select an academic year</string>
    <string-array name="academic_year_array">
        <item>2018-2019</item>
        <item>2017-2018</item>
        <item>2016-2017</item>
        <item>2015-2016</item>
        <item>2014-2015</item>
        <item>2013-2014</item>
        <item>2012-2013</item>
        <item>2011-2012</item>
        <item>2010-2011</item>
        <item>2009-2010</item>
    </string-array>

    <string name="semester_prompt">select a semester</string>
    <string-array name="semester_array">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="questions_header">Questions</string>
    <string name="solutions_header">Solutions</string>
    <string name="discussion_header">Discussion</string>

    <string name="searching">Searching for course…</string>
    <string name="adding_question">Adding exam question number…</string>
    <string name="adding_solution">Adding a solution…</string>
    <string name="adding_discussion">Adding discussion…</string>
    <string name="inspect_question">Inspect</string>
    <string name="preparing_question_layout">Preparing questions layout…</string>
    <string name="preparing_solution_layout">Preparing solutions layout…</string>
    <string name="preparing_discussion_layout">Preparing discussion layout…</string>
    <string name="inspecting_question">Inspecting…</string>
    <string name="unlocking_solution">Unlocking…</string>
    <string name="unlock_solution">Unlock</string>

    <string name="input_solution_title">Please enter solution title</string>
    <string name="input_solution_content">Please enter solution content</string>
    <string name="input_discussion_content">Please enter discussion content</string>
</resources>
