<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/solution_root_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/greeting_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Hello "
            android:textColor="@color/colorTextView"
            android:textSize="8sp"/>

        <TextView
            android:id="@+id/unlock_remaining"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="  Your unlocks available: "
            android:textColor="@color/colorTextView"
            android:textSize="8sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/course_title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="Course code and course title"
        android:textSize="10sp"
        android:textColor="@color/colorTextView"/>

    <TextView
        android:id="@+id/academic_year_and_semester_and_question_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="Academic year and semester and Q.No."
        android:textSize="15sp"
        android:textColor="@color/colorTextView"/>

    <TextView
        android:id="@+id/solution_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/solutions_header"
        android:textSize="20sp"
        android:textColor="@color/colorTextView"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:id="@+id/solution_scroll_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/solution_scrollview_layout">


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/add_solution_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/addQuestionButton"
        android:gravity="center"
        android:text="@string/add_solution"
        android:textColor="@color/addQuestionButtonText"
        android:textSize="15sp" />

    <Button
        android:id="@+id/back_to_question_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/backToSearchButton"
        android:gravity="center"
        android:text="@string/back_to_question"
        android:textColor="@color/backToSearchButtonText"
        android:textSize="15sp" />

    <Button
        android:id="@+id/log_out_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/logoutButton"
        android:gravity="center"
        android:text="@string/log_out"
        android:textColor="@color/logoutButtonText"
        android:textSize="15sp" />


</LinearLayout>