<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/discussion_root_view">

    <TextView
        android:id="@+id/course_title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="Course code and course title"
        android:textSize="15sp"
        android:textColor="@color/colorTextView"
        android:fontFamily="serif-monospace"/>

    <TextView
        android:id="@+id/academic_year_and_semester_and_question_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="Academic year and semester and Q.No."
        android:textSize="12sp"
        android:textColor="@color/colorTextView"
        android:fontFamily="serif-monospace"/>

    <TextView
        android:id="@+id/solution_title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="solution title"
        android:textSize="15sp"
        android:textColor="@color/colorAccent"
        android:fontFamily="monospace"/>

    <TextView
        android:id="@+id/author_timestamp_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="author and timestamp"
        android:textSize="10sp"
        android:textColor="@color/colorAccent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:id="@+id/solution_content_scroll_view">

        <TextView
            android:id="@+id/solution_content_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextView"
            android:text="solution content"
            android:textSize="15sp"/>


    </ScrollView>

    <TextView
        android:id="@+id/discussion_title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/discussion_header"
        android:textSize="15sp"
        android:textColor="@color/colorAccent"
        android:fontFamily="monospace"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:id="@+id/discussion_scroll_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/discussion_scrollview_layout">


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/add_discussion_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/addQuestionButton"
        android:gravity="center"
        android:text="@string/add_discussion"
        android:textColor="@color/addQuestionButtonText"
        android:textSize="15sp" />

    <Button
        android:id="@+id/back_to_solution_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/backToSearchButton"
        android:gravity="center"
        android:text="@string/back_to_solution"
        android:textColor="@color/backToSearchButtonText"
        android:textSize="15sp" />

    <Button
        android:id="@+id/log_out_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/logoutButton"
        android:gravity="center"
        android:text="@string/log_out"
        android:textColor="@color/logoutButtonText"
        android:textSize="15sp" />


</LinearLayout>